--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 django-cors-headers==3.13.0
 django-environ==0.9.0
+django-jazzmin==2.5.0
 django-debug-toolbar==3.6.0
 Pillow==9.2.0
