--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ django-cors-headers==3.13.0
 django-environ==0.9.0
 django-jazzmin==2.5.0
 django-debug-toolbar==3.6.0
+drf-spectacular==0.24.2
+drf-spectacular-sidecar==2022.10.1
 Pillow==9.2.0
 channels==3.0.5
